<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="activities.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <fragment
            android:id="@+id/map"
            class="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnViewRoad"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_dark"
            android:text="@string/label_view_road"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="10sp"
            tools:ignore="RtlHardcoded,SmallSp" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnViewSatellite"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@+id/btnViewRoad"
            android:background="@drawable/button_light"
            android:text="@string/label_view_satellite"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="10sp"
            tools:ignore="RtlHardcoded,SmallSp" />

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/chkTraffic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="@color/colorPrimaryDark"
            android:padding="8dp"
            android:text="@string/label_traffic"
            android:textColor="@color/colorPrimaryLight"
            app:buttonTint="@color/colorPrimaryLight"
            tools:ignore="RtlHardcoded" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorPrimaryLight"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/txtCenter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/label_location"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                tools:ignore="NestedWeights,RtlHardcoded" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/label_center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/txtTouch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/label_location"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                tools:ignore="NestedWeights,RtlHardcoded" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/label_touch"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorAccent"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgCity"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/app_name"
            android:padding="8dp"
            android:src="@drawable/city" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/lytButtons"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal" />
        </HorizontalScrollView>
    </LinearLayout>
</LinearLayout>
